--- a/info_game.html
+++ b/info_game.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li>Shooter
                             <ul class="sub-menu">
-                                <li><a href="info_game.html"></a>PUBG</a></li>
+                                <li><a href="info_game.html">PUBG</a></li>
                                 <li>Battlefield 1</li> 
                                 <li>Call of Duty</li>  
                             </ul>
@@ -65,19 +65,10 @@
             <div>
                 <img id="img-portada" src="">
             </div>
-            <!--
-            <img src="image/body.jpg">
-            -->
             <h3>Acerca del juego</h3>
             <p id="info-juego1"></p>
-        <!--    <p>PLAYERUNKNOWN’S BATTLEGROUNDS es un shooter basado en el modo Battle Royale que está siendo desarrollado a través de la retroalimentación con la comunidad. Comenzando de la nada, los usuarios tienen que luchar uno contra el otro para localizar armas y suministros para ser el único sobreviviente. Este juego realista de alta tensión se establece en una isla masiva de 8x8 km con un nivel de detalle que muestra las capacidades de Unreal Engine 4.</p>
-            -->
             <p id="info-juego2"></p>
-            <!--
-            <p>Como creador del modo de juego Battle Royale de las series ARMA y H1Z1: King of the Kill, Greene está desarrollando el juego conjuntamente con un equipo veterano de la empresa Bluehole para crear la más diversa y robusta experiencia de Battle Royale hasta la fecha</p>
-           -->
-           <p id="info-juego3"></p>
-            <!--<p>No solo un juego. Esto es BATTLE ROYALE</p>-->
+            <p id="info-juego3"></p>
             <figure>
                 <div>
                     <img id="image1" src="">
@@ -92,21 +83,6 @@
 
                 </div>
             </figure>
-            <!--
-            <figure>
-                <div>
-                    <img src="image/g2.jpg" width="620px">
-                </div>
-                <div>
-                    <img src="image/g1.jpg" width="100px">
-                    <img src="image/g3.jpg" width="100px">
-                    <img src="image/g4.jpg" width="100px">
-                    <img src="image/g5.jpg" width="100px">
-                    <img src="image/g6.jpg" width="100px">
-                    <img src="image/g7.jpg" width="100px">
-                </div>
-            </figure>
-            -->
             <table>
                 <tr><th>Categoria</th><th>Valoración</th><th>Precio</th></tr>
                 <tr><td id="categoria"></td><td id="valoracion"></td><td id="precio"></td></tr>
